<resources>
    <string name="app_name">AssociateAndroidDeveloperPreparation</string>
    <string name="title_activity_toast">ToastActivity</string>
    <string name="title_activity_localization">LocalizationActivity</string>

    <string name="hello">Hello World</string>
    <string name="tutlane">Tutlane</string>
    <string name="android">Android Tutorial</string>
    <string name="reigster">Register</string>


    <string name="notification_title">You\'ve been notified!</string>
    <string name="notification_text">This is your notification text.</string>
    <string name="update">Update Notification</string>
    <string name="notify_me">Notify Me!</string>
    <string name="update_me">Update Me!</string>
    <string name="cancel_me">Cancel Me!</string>
    <string name="notification_updated">Notification Updated!</string>
    <string name="notification_channel_name">Mascot Notification</string>
    <string name="notification_channel_description">Notification from Mascot</string>


    <string name="editText_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>
    <string name="editText_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>
    <string name="editText_share">Random string to be shared!</string>
    <string name="button_share">Share This Text</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="title_activity_picker">PickerActivity</string>
    <string name="time_picker">TimePicker</string>
    <string name="date_message">Date:</string>
    <string name="date_picker">DatePicker</string>
</resources>
